// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <FeedsDetail /> should renders correctly with different state of props 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "feedsPanel": true,
        }
      }
      isBtnShowPanel={false}
      isOpen={false}
      isShowControlPanel={true}
      name="feedsPanel"
      title="Edit Feed"
    >
      <ReduxForm
        detail={Object {}}
      />
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <FeedsDetail /> should renders correctly with different state of props 2`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "feedsPanel": true,
        }
      }
      isBtnShowPanel={false}
      isOpen={false}
      isShowControlPanel={true}
      name="feedsPanel"
      title="Edit Feed"
    >
      <ReduxForm
        detail={
          Object {
            "author": "bob.smith@gmail.com",
            "dateCreated": 1482170593395,
            "landingPageUrl": "http://www.bbc.co.uk/news/health",
            "name": "BBC Health",
            "rssFeedUrl": "http://feeds.bbci.co.uk/news/health/rss.xml?edition=uk#",
            "sourceId": "testSourceID1",
          }
        }
      />
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <FeedsDetail /> should renders with all props correctly 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      currentPanel="currentPanel"
      editedPanel="editedPanel"
      formValues={Object {}}
      isBtnShowPanel={false}
      isOpen={false}
      isShowControlPanel={true}
      name="feedsPanel"
      onCancel={[Function]}
      onEdit={[Function]}
      onExpand={[Function]}
      onSaveSettings={[Function]}
      title="Feed"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div>
              <div
                className="row-expand"
              >
                <div
                  className="col-expand-left"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Name
                    </label>
                    <div
                      className="form-control-static"
                    >
                      BBC Health
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="row-expand"
              >
                <div
                  className="col-expand-left"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Landing page URL
                    </label>
                    <div
                      className="form-control-static"
                    >
                      http://www.bbc.co.uk/news/health
                    </div>
                  </div>
                </div>
                <div
                  className="col-expand-right"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      RSS feed URL
                    </label>
                    <div
                      className="form-control-static"
                    >
                      http://feeds.bbci.co.uk/news/health/rss.xml?edition=uk#
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="row-expand"
              >
                <div
                  className="col-expand-left"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Author
                    </label>
                    <div
                      className="form-control-static"
                    >
                      bob.smith@gmail.com
                    </div>
                  </div>
                </div>
                <div
                  className="col-expand-right"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Date
                    </label>
                    <div
                      className="form-control-static"
                    >
                      19-Dec-2016
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;
